<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/parameters_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headers_background"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:padding="5dp"
        android:text="@string/parameters_dialog_title"
        android:textColor="@color/white"
        android:textSize="33sp" />

    <LinearLayout
        android:id="@+id/parameters_only_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headers_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/parameters_only_event_icon"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/parameters_only_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="33sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/parameters_event_title"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <LinearLayout
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_title"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parameters_event_date"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/parameters_event_current_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_date"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parameters_event_time"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/parameters_event_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/parameters_prev_alarms_container"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_time"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parameters_prev_alarms"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/parameters_prev_alarms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:textSize="25sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/current_desc_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_title"
            android:layout_marginStart="430dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/parameters_event_current_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/events_focus"
                android:scrollbars = "vertical"
                android:scrollbarSize="8dp"
                android:fadeScrollbars="true"
                android:scrollbarTrackVertical="@color/white_transparent"
                android:scrollbarThumbVertical="@color/grey_medium_lighter"
                android:minLines="1"
                android:maxLines="6"
                android:nextFocusRight="@id/parameters_negative_button"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/repetition_parameters_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/repetition_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/parameters_repetition_title"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <LinearLayout
            android:id="@+id/current_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repetition_title"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parameters_repetition_interval"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/parameters_repetition_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stop_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_interval"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parameters_repetition_date"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/parameters_stop_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stop_date"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parameters_repetition_time"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/parameters_stop_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/repetition_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repetition_title"
            android:layout_marginStart="430dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/parameters_repetition_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_interval"
            android:layout_alignStart="@id/repetition_type"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/parameters_repetition_config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/dialog_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/parameters_affirmative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_buttons_background"
            android:layout_marginEnd="40dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="2dp">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/accept_button"
                android:textColor="@color/white"
                android:textSize="27sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/parameters_negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_buttons_background"
            android:clickable="true"
            android:focusable="true"
            android:padding="2dp">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/dismiss_menu_button"
                android:textColor="@color/white"
                android:textSize="27sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
