<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/black_transparent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:background="@drawable/dialog_background">

        <TextView
            android:id="@+id/delete_events_dialog_title"
            android:layout_width="@dimen/dpi_500dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="@dimen/dpi_15dp"
            android:text="@string/delete_events_dialog_title"
            android:textColor="@color/black"
            android:textSize="@dimen/dpi_30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dpi_5dp"
            android:layout_marginBottom="@dimen/dpi_10dp"
            android:layout_gravity="center"
            android:padding="@dimen/dpi_10dp">

            <LinearLayout
                android:id="@+id/delete_events_affirmative_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_buttons_background"
                android:layout_marginEnd="@dimen/dpi_20dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/dpi_2dp">

                <TextView
                    android:layout_width="@dimen/dpi_190dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dpi_2dp"
                    android:text="@string/delete_events_affirmative"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dpi_27sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/delete_events_negative_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_buttons_background"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/dpi_2dp">

                <TextView
                    android:layout_width="@dimen/dpi_190dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dpi_2dp"
                    android:text="@string/delete_events_negative"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dpi_27sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
