<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_height"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="@dimen/header_height"
            android:layout_height="@dimen/header_height"
            android:background="@drawable/header_logo" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_height"
            android:layout_marginStart="@dimen/icon_margin"
            android:fontFamily="sans-serif-light"
            android:gravity="start|center"
            android:text="@string/layout_title"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_height"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <!--User data-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_photo"
                android:layout_width="@dimen/header_height"
                android:layout_height="@dimen/header_height"
                android:src="@drawable/photo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                android:gravity="start|center_vertical">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_user"
                    android:textColor="@color/black"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/no_id"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>

        <!--Divider-->
        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="66dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/common_divider_background"/>
        </LinearLayout>

        <!--Date and time-->
        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="vertical">

            <TextClock
                android:id="@+id/item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textSize="33sp" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:fontFamily="sans-serif-light"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>